# pub_if

./: Cargo.toml  README.md
src/: lib.rs
tests/: compile_tests.rs
tests/compile_fail/: without_feature_private_access.rs  without_feature_private_access.stderr  without_feature_private_access2.rs  without_feature_private_access2.stderr
tests/compile_pass/: with_feature_all_public.rs  without_feature_pub_only.rs
